src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Agreement_Executed_Date__c</fullName>
        <label>Account Agreement Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Agreement_Sent_Date__c</fullName>
        <label>Account Agreement Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Number_Loan__c</fullName>
        <description>For use only on the Loan Account page</description>
        <formula>Account_Number__c+&quot;L&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Replaces existing Account Number and does not include Loan Accounts; Loan Accounts will have a separate formula field that appends the &quot;L&quot; after the value</description>
        <displayFormat>{00000000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accumulation Client</fullName>
                </value>
                <value>
                    <fullName>Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Goldline DNC / DCP</fullName>
                </value>
                <value>
                    <fullName>IRA Client</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Loan Client</fullName>
                </value>
                <value>
                    <fullName>New Lead</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Protected Client</fullName>
                </value>
                <value>
                    <fullName>Protected Prospect</fullName>
                </value>
                <value>
                    <fullName>Reassign</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Unable to Invest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Funded_Amount__c</fullName>
        <label>Actual Funded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advanced_Funded_Amount__c</fullName>
        <label>Advanced Funded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anniversary__c</fullName>
        <label>Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Base_Reason__c</fullName>
        <label>Assigned Base Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>placeholder</fullName>
                </value>
                <value>
                    <fullName>9LI</fullName>
                </value>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>BAD</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>9CG</fullName>
                </value>
                <value>
                    <fullName>CXL</fullName>
                </value>
                <value>
                    <fullName>D1C</fullName>
                </value>
                <value>
                    <fullName>D1P</fullName>
                </value>
                <value>
                    <fullName>D2C</fullName>
                </value>
                <value>
                    <fullName>D2P</fullName>
                </value>
                <value>
                    <fullName>D3C</fullName>
                </value>
                <value>
                    <fullName>D3P</fullName>
                </value>
                <value>
                    <fullName>D4C</fullName>
                </value>
                <value>
                    <fullName>D4P</fullName>
                </value>
                <value>
                    <fullName>D5C</fullName>
                </value>
                <value>
                    <fullName>D5P</fullName>
                </value>
                <value>
                    <fullName>D6C</fullName>
                </value>
                <value>
                    <fullName>D6P</fullName>
                </value>
                <value>
                    <fullName>D7C</fullName>
                </value>
                <value>
                    <fullName>D7P</fullName>
                </value>
                <value>
                    <fullName>D8C</fullName>
                </value>
                <value>
                    <fullName>D8P</fullName>
                </value>
                <value>
                    <fullName>D9C</fullName>
                </value>
                <value>
                    <fullName>D9P</fullName>
                </value>
                <value>
                    <fullName>DAC</fullName>
                </value>
                <value>
                    <fullName>DPA</fullName>
                </value>
                <value>
                    <fullName>DCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address_Validation_Status__c</fullName>
        <label>Billing Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Validation_Timestamp__c</fullName>
        <label>Billing Address Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <description>Business Phone Placeholder  for Phone Object</description>
        <inlineHelpText>Business Phone</inlineHelpText>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CRM_Account_GUID__c</fullName>
        <externalId>true</externalId>
        <label>CRM Account GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency Place Holder</description>
        <label>Currency</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Holdings__c</fullName>
        <label>Current Holdings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custodian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IRA</description>
        <label>Custodian</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custodian Accounts</relationshipLabel>
        <relationshipName>CustodianAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_PIN__c</fullName>
        <label>Customer PIN</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNC_Authority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DNC Authority</label>
        <referenceTo>DNC_Authority__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Primary_Individual_Account__r.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_subscription__c</fullName>
        <label>E-Mail subscription</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Phone_Contact_Date__c</fullName>
        <label>First Phone Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Sales__c</fullName>
        <label>Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Account_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Account Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IRA_Account_Number__c</fullName>
        <label>IRA Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Loan__c</fullName>
        <label>Is Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Related__c</fullName>
        <label>Last Activity Related</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Buy_Dollar_Amount__c</fullName>
        <label>Last Buy Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts (Last Campaign)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Conversation_Date__c</fullName>
        <label>Last Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Lead_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Lead Source</label>
        <referenceTo>Lead_Source__c</referenceTo>
        <relationshipLabel>Accounts (Last Lead Source)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Literature_Sent__c</fullName>
        <label>Last Literature Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Order_Date__c</fullName>
        <label>Last Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Reassignment_Date__c</fullName>
        <label>Last Reassignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Sell_Dollar_Amount__c</fullName>
        <label>Last Sell Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Origin__c</fullName>
        <label>Lead Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>placeholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metal_Balance__c</fullName>
        <label>Metal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Mobile Phone Number place holder of Phone Object</description>
        <inlineHelpText>Mobile Phone Number</inlineHelpText>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Next_Purchase_Details__c</fullName>
        <label>Next Purchase Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 week</fullName>
                </value>
                <value>
                    <fullName>2 week</fullName>
                </value>
                <value>
                    <fullName>3 week</fullName>
                </value>
                <value>
                    <fullName>4 week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Trade_Amount__c</fullName>
        <label>Next Trade Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 5K</fullName>
                </value>
                <value>
                    <fullName>5k - 10k</fullName>
                    <label>5K - 10K</label>
                </value>
                <value>
                    <fullName>10k - 20k</fullName>
                    <label>10K - 20K</label>
                </value>
                <value>
                    <fullName>20K+</fullName>
                </value>
                <value>
                    <fullName>100K+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Trade_Date__c</fullName>
        <label>Next Trade Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 Week</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 Week</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 Week</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 Week +</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Trade_Expected_Date__c</fullName>
        <description>Add selected week days to current date</description>
        <formula>NOW() + (VALUE(TEXT(Next_Trade_Date__c))  * 7)</formula>
        <label>Next Trade Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Sellable_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>scenarios where Accounts cannot be contacted (Beneficiary can&apos;t be contacted but Trustee can)</description>
        <label>Non-Sellable Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Orders__c</fullName>
        <label>Number of Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Lead Source</label>
        <referenceTo>Lead_Source__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Validation_Message__c</fullName>
        <label>Phone Validation Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Validation_Status__c</fullName>
        <label>Phone Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Validation_Timestamp__c</fullName>
        <label>Phone Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Power_of_Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Power of Attorney</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account selected is not a Power of Attorney account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Attorney</value>
            </filterItems>
            <infoMessage>Displaying Power of Attorney accounts only.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Power of Attorney Accounts</relationshipLabel>
        <relationshipName>PowerOfAttorneyAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predefined_Notes__c</fullName>
        <label>Predefined Notes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>placeholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <formula>Primary_Individual_Account__r.Primary_Email__pc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Individual_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IRA/TRUST/BUS</description>
        <label>Primary Individual Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account selected is not an Individual Account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Individual</value>
            </filterItems>
            <infoMessage>Displaying Individual Accounts only.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Individual Account</relationshipLabel>
        <relationshipName>PrimaryIndividualAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <description>Primary Phone holder from Phone Object</description>
        <inlineHelpText>Primary Phone Number</inlineHelpText>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Approver__c</fullName>
        <label>Secondary Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <formula>Primary_Individual_Account__r.Secondary_Email__pc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email_del__c</fullName>
        <formula>Primary_Individual_Account__r.Secondary_Email__pc</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Validation_Status__c</fullName>
        <label>Shipping Address Validation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Validation_Timestamp__c</fullName>
        <label>Shipping Address Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Balance__c</fullName>
        <label>Storage Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAC__c</fullName>
        <description>Open text field for putting in a tag that relates to a type of individual based on market research. republican etc.</description>
        <label>TAC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Field_1__c</fullName>
        <description>Generic field used to hold data that has been aggregated in the data warehouse, allowing users to report on this data in the short run. Example would be if users want to aggregate total amount of orders completed in the last x days.</description>
        <label>T-Field 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Field_2__c</fullName>
        <label>T-Field 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Approver__c</fullName>
        <label>Tertiary Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Approver__c</fullName>
        <label>Third Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>placeholder</fullName>
                </value>
                <value>
                    <fullName>Samoa Time Zone</fullName>
                </value>
                <value>
                    <fullName>Hawaii-Aleutian Time Zone</fullName>
                </value>
                <value>
                    <fullName>Alaska Time Zone</fullName>
                </value>
                <value>
                    <fullName>Pacific Time Zone</fullName>
                </value>
                <value>
                    <fullName>Mountain Time Zone</fullName>
                </value>
                <value>
                    <fullName>Central Time Zone</fullName>
                </value>
                <value>
                    <fullName>Eastern Time Zone</fullName>
                </value>
                <value>
                    <fullName>Atlantic Time Zone</fullName>
                </value>
                <value>
                    <fullName>Chamorro Time Zone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Purchases__c</fullName>
        <label>Total Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Probability__c</fullName>
        <label>Trade Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.25</fullName>
                    <label>0-25%</label>
                </value>
                <value>
                    <fullName>0.50</fullName>
                    <label>25-50%</label>
                </value>
                <value>
                    <fullName>0.75</fullName>
                    <label>50-75%</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>75-100%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trust_Pilot_Survey_Completed_Date__c</fullName>
        <label>Trust Pilot Survey Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trust_Pilot_Survey_Sent_Date__c</fullName>
        <label>Trust Pilot Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trustee_Status__c</fullName>
        <label>Trustee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trustee Exempt</fullName>
                </value>
                <value>
                    <fullName>Trustee Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unsubscribe_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribe All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Marketing_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribe Marketing Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Sales_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribe Sales Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isProfitable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProfitable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSynchronizedAX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSynchronizedAX</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Current_Holdings__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Bad_User_Base</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Current_Holdings__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Bad</value>
        </filters>
        <label>Bad User Base</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_User_Base</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Current_Holdings__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Una</value>
        </filters>
        <label>Unassigned User Base</label>
    </listViews>
    <recordTypes>
        <fullName>Account</fullName>
        <active>false</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accumulation_Client</fullName>
        <active>false</active>
        <description>For use with Accumulation Clients</description>
        <label>Accumulation Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>For use with Business Accounts</description>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Custodian_Account</fullName>
        <active>true</active>
        <description>For use with Custodian Accounts</description>
        <label>Custodian Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Estate_Account</fullName>
        <active>true</active>
        <description>For use with Estate Accounts</description>
        <label>Estate Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>IRA_Account</fullName>
        <active>true</active>
        <description>For use with IRA Accounts</description>
        <label>IRA Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Account</fullName>
        <active>true</active>
        <description>For use with Loan Accounts</description>
        <label>Loan Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trust_Account</fullName>
        <active>true</active>
        <description>For use with Trust Accounts</description>
        <label>Trust Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Address_Cannot_Be_Updated</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
(OR(ISCHANGED(BillingStreet), ISCHANGED(BillingCity), ISCHANGED(BillingState), ISCHANGED(BillingPostalCode),ISCHANGED(BillingCountry)) || 
OR( 
ISCHANGED(PersonMailingStreet), ISCHANGED(PersonMailingCity), ISCHANGED(PersonMailingState), ISCHANGED(PersonMailingPostalCode), ISCHANGED(PersonMailingCountry))|| 
OR( 
ISCHANGED(ShippingStreet), ISCHANGED(ShippingCity), ISCHANGED(ShippingState), ISCHANGED( ShippingCountry))), 
Current_Holdings__c &gt; 0, 
$Profile.Name = &quot;AE User&quot; 
)</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>Address cannot be updated by AE if Current Holdings are greater than $0.00</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Name_Required</fullName>
        <active>true</active>
        <description>Can&apos;t save Person Account without filling out First Name field</description>
        <errorConditionFormula>AND((ISBLANK(FirstName) &amp;&amp; (RecordType.Name = &quot;Individual Account&quot;|| RecordType.Name = &quot;Power of Attorney&quot;)))</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is a required field.</errorMessage>
    </validationRules>
</CustomObject>